Fix layout issues

--- a/src/components/ClientTransactions/Body/MiddleBody/Dashboard/Dashboard.css
+++ b/src/components/ClientTransactions/Body/MiddleBody/Dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 .bodyContainer {
     display: flex;
     flex-direction: row;
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
 }
 
 .leftBodyContainer {
